# catalan-tree

./: Cargo.toml  Readme.md  rustfmt.toml
src/: lib.rs
src/expression/: inverse_polish.rs  mod.rs  operators.rs
src/fbt/: mod.rs
src/hardcode/: mod.rs
src/utils/: catalan_tree.m  tree.rs
tests/: main.rs
